fixed about section and spacing

--- a/fle_site/apps/main/static/css/kolibri.css
+++ b/fle_site/apps/main/static/css/kolibri.css
@@ -7,15 +7,16 @@ be sure to divide your work into sections on this page. */
 h3, h2{
 	font-size:30px;
 	color:#6F3496;
+	margin-top: 5%;
 }
 h1{
 	font-size:40px;
-	color:#6F3496
+	color:#6F3496;
+	margin-top: 5%;
 }
 
 hr{
-	margin-left:5%;
-	margin-right:5%;
+	margin:5%;
 }
 
 
@@ -119,6 +120,37 @@ hr{
 	width:350px;
 	height:250px;
 	opacity: 50%;
+}
+
+.about-img{
+	margin-top:5%;
+	margin-bottom:7%;
+}
+
+.img-bg{
+	background-color:#957FB3;
+	opacity:.85;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	min-height: 80vh;
+	max-width: 100%;
+	margin-top:-52%;
+	
+}
+
+.img-bg h1{
+	margin-top:16%;
+	color:#ffffff;
+	margin-bottom:2%;
+}
+
+.img-bg p{
+	color:#ffffff;
+	font-size:22px;
+	margin-left:30%;
+	margin-right:30%;
 }
 
 
